k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-albums-app
  labels:
    app: gin-albums
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gin-albums
  template:
    metadata:
      labels:
        app: gin-albums
    spec:
      containers:
      - name: gin-albums
        image: australia-southeast1-docker.pkg.dev/sales-209522/kilinov-repo/sales-209522/gin-albums-linux:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gin-albums-service
spec:
  selector:
    app: gin-albums
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
